--- a/style.css
+++ b/style.css
@@ -14,19 +14,38 @@ body{
     font-family: 'Poppins', sans-serif;
     background-image: url('https://img3.akspic.ru/fit/135115-sneg-derevo-nebo-priroda-dikaya_mestnost-x750.jpg');
     background-size: cover;
+    position: relative;
+}
+
+body::before{
+    content:'';
+	position: absolute;
+        top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 0;
 }
 
 .TitleCountDown{
     font-size: 4rem;
     margin-top: -10rem;
     text-align: center;
+    color: white;
+    z-index: 1;
 }
 
 .CountDownContainer{
     display: flex;
     justify-content: space-evenly;
+    z-index: 1;
 }
 
+p{
+    color: white;
+    z-index: 1;
+}
 
 .CountTextValue{
     font-size: 4rem;
@@ -45,4 +64,8 @@ body{
 }
 .destination{
      text-align: center;
+}
+
+.emoji-container{
+    z-index: 1;
 }
